# MATERIAL_TRANSFER_ROBOT_2026

./: .gitmodules
ADMINISTRATIVE/: Schedules.docx  Tasks_and_Schedules.xlsx  ~$hedules.docx  ~WRL2174.tmp
CAD/: 0th Stack.step  AL 15.8L Extrude.step  AL 28.8L Extrude.step  Assem1 final prj.f3z  Back Support Structure Base.step  Camera cross beam v1.step  Carbon Fiber Tube 52.7cm height 15mm OD 2mm thickness v2.step  Carbon Fiber Tube 56cm length 15mm OD 1mm thickness v2.step  Intermediate Stack.step  Intermediate layer mount v2.step  Support structure base.step  Top Tray Monut v1.step  Tray.step
CODE/: .gitignore  99-slabs.rules  Dockerfile  Dockerfile.base  Dockerfile.prod  README.md  cyclonedds.xml  docker-compose.arm64.yml  docker-compose.yml
CODE/ros_ws/src/aruco_localization/: aruco_marker_generator.py
CODE/ros_ws/src/campus_maps/: package.xml  setup.cfg  setup.py
CODE/ros_ws/src/campus_maps/campus_maps/: tile_switcher.py
CODE/ros_ws/src/campus_maps/maps/: tile01.yaml  tile02.pgm  tile02.yaml
CODE/ros_ws/src/campus_maps/rviz/: tile.rviz
CODE/ros_ws/src/install/: setup.sh  (+1 more)
Map/: hi-tech_2nd_floor.DXF
REVIEWS/First_Review/: Presentation.pptx
REVIEWS/Zeroth Review/: Minutes of Meeting.docx  Presentation.pptx
Schematic/: Perf Board Layout.SchDoc
TECH_DOCS/: Battery_Sizing_Calculation.xlsx  Component_List.xlsx  ROS2_Map_Switching_Process.docx
map/: #hi-tech 2 floor.DXF  hitech 2 floor.DXF  hitech 2 floor.SLDPRT  map switching in ros2 literature survey.docx  ~$MPLETE ROS2 MAP SWITCHING PROCESS.docx  ~$p switching in ros2 literature survey.docx
(+27 files in other folders)
