<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>campus_maps</name>
  <version>0.0.0</version>

  <description>
    Campus map tiles and ROS 2 node for dynamic map switching using VIO/IMU pose
  </description>

  <maintainer email="lk9092@srmist.edu.in">lalithesh</maintainer>
  <license>Apache-2.0</license>

  <!-- ===================== -->
  <!-- Build & Runtime Deps -->
  <!-- ===================== -->
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>ament_index_python</depend>

  <!-- ===================== -->
  <!-- Test Dependencies -->
  <!-- ===================== -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- ===================== -->
  <!-- Export -->
  <!-- ===================== -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
